--- a/testing.html
+++ b/testing.html
@@ -8,7 +8,7 @@
 <body>
     <h1>This is a Heading</h1>
     <!-- Team 7 -->
-    <p>This is a paragraph.</p>
+    <p>This is Hueyyyyyyyy</p>
     <!-- Change this into your name -->
 </body>
 
