--- a/skyskyht.html
+++ b/skyskyht.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>This is a Heading</h1>
+    <h1>Hello world</h1>
     <!-- Team 7 -->
     <p>This is Hueyyyyyyyy</p>
     <!-- Change this into your name -->
